apps/jellyfin/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: jellyfin
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: jellyfin
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: jellyfin
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: seerr
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: sonarr-anime
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
            tailscale.com/parent-resource: jellyfin
            tailscale.com/parent-resource-ns: jellyfin
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: sonarr
            app.kubernetes.io/controller: sonarr
        - matchLabels:
            io.kubernetes.pod.namespace: radarr
            app.kubernetes.io/controller: radarr
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
